<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">
    <!--        header  -->
    <RelativeLayout
        android:id="@+id/headerlg"
        android:layout_width="match_parent"
        android:layout_height="270dp">
        <ImageView
            android:id="@+id/img_login"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img_login"
            />

        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/txtlogin1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_login"
            android:layout_centerInParent="true"
            android:text="@string/login"
            android:textColor="#1C0606"
            android:textSize="40sp" />
    </RelativeLayout>
    <!--    body -->
    <RelativeLayout
        android:id="@+id/bodylg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headerlg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/layerlg"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="12dp"
                android:ems="12"
                android:inputType="textEmailAddress"
                android:hint="@string/txtuserlogin"
                android:padding="12dp"
                android:textColorHint="#4F94CD"
                android:textSize="28sp" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@drawable/layerlg"
                android:drawableLeft="@drawable/ic_password"
                android:drawableRight="@drawable/ic_eye"
                android:drawablePadding="12dp"
                android:ems="12"
                android:hint="@string/txtpwlogin"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColorHint="#4F94CD"
                android:textSize="28sp" />
        </LinearLayout>
    </RelativeLayout>
    <!--    body sub-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bodylg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!--recover pass-->
            <CheckBox
                android:id="@+id/checkboxRemember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/cbremember"
                android:textColor="#1167AA"
                android:textSize="23sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="12dp"
                android:layout_marginRight="10dp"
                android:text="@string/recoverpw"
                android:textColor="#1167AA"
                android:textSize="20sp" />
            <!--  login   -->
            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="11dp"
                android:layout_marginTop="25dp"
                android:backgroundTint="#005096"
                android:ems="12"
                android:padding="12dp"
                android:text="@string/btnlogin"
                android:textSize="27sp" />
            <!--create account-->
            <TextView
                android:id="@+id/tv_Signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:text="@string/testview"
                android:textColor="#254981"
                android:textSize="25dp" />

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>