<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">
        <!--Header text-->
        <RelativeLayout
            android:id="@+id/headersingup"
            android:layout_width="match_parent"
            android:layout_height="80dp">
            <TextView
                android:id="@+id/txtWell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="20dp"
                android:text="@string/txtAcc"
                android:textAllCaps="true"
                android:textColor="#1C0606"
                android:textSize="35sp" />
        </RelativeLayout>
        <!--Body-->
        <RelativeLayout
            android:id="@+id/bodylg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/headersingup">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:orientation="vertical"
                android:paddingLeft="6dp">
                <!--            Email-->
                <TextView
                    android:layout_width="385dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="14dp"
                    android:text="@string/txtEmailSU"
                    android:textSize="25sp" />
                <!--            input email -->
                <EditText
                    android:inputType="textEmailAddress"
                    android:id="@+id/edt_email"
                    android:paddingLeft="16dp"
                    android:layout_width="374dp"
                    android:layout_height="48dp"
                    android:layout_marginBottom="14dp"
                    android:background="@drawable/layersingupboder"
                    android:ems="10"
                    android:textSize="25sp" />
                <!--            password -->
                <TextView
                    android:layout_width="385dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="14dp"
                    android:text="@string/txtPassW"
                    android:textSize="25sp" />
                <!--            input pass-->
                <EditText
                    android:id="@+id/edt_pass"
                    android:paddingLeft="16dp"
                    android:layout_width="374dp"
                    android:layout_height="48dp"
                    android:background="@drawable/layersingupboder"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:textSize="25sp" />
                <!--         Re Pass word  -->
                <TextView
                    android:layout_width="385dp"
                    android:layout_height="30dp"
                    android:text="@string/txtRetypePass"
                    android:layout_marginBottom="14dp"
                    android:textSize="25sp" />
                <!--            input pass word  -->
                <EditText
                    android:id="@+id/edt_repass"
                    android:paddingLeft="16dp"
                    android:inputType="textPassword"
                    android:layout_width="374dp"
                    android:layout_height="48dp"
                    android:layout_marginBottom="14dp"
                    android:background="@drawable/layersingupboder"
                    android:ems="10"
                    android:textSize="25sp" />
            </LinearLayout>
        </RelativeLayout>
        <!--Footer-->
        <RelativeLayout
            android:id="@+id/bodybtn"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bodylg">

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="25dp"
                android:backgroundTint="#005096"
                android:ems="12"
                android:padding="12dp"
                android:text="@string/txtSignup"
                android:textSize="27sp" />
            <Button
                android:id="@+id/btn_login"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_below="@+id/btn_signup"
                android:layout_marginTop="16dp"
                android:backgroundTint="#005096"
                android:ems="12"
                android:padding="12dp"
                android:text="@string/login"
                android:textSize="27sp" />
        </RelativeLayout>
    </RelativeLayout>